<resources>
    <string name="app_name">MilkyWay</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="empty_email">Email harus diisi</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="empty_pass">Password harus diisi</string>
    <string name="invalid_pass">Password min 8 karakter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_account">Belum Punya Akun? Register</string>
    <string name="have_account">Sudah Punya Akun? Login</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="image_login">image login</string>
    <string name="home">Home</string>
    <string name="menu">menu</string>
    <string name="request">Permintaan ASI</string>
    <string name="requestRole">Request</string>
    <string name="donation">Donasi ASI</string>
    <string name="care">Perawatan Bayi</string>
    <string name="invalid_input">Data harus diisi</string>
    <string name="age">Umur</string>
    <string name="religion">Agama</string>
    <string name="location">Lokasi</string>
    <string name="current_location">Lokasi Saat Ini</string>
    <string name="submit">Submit</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="body_weight">Berat Badan</string>
    <string name="result">Hasil</string>
    <string name="phone">Telephone</string>
    <string name="dietary">Dietary</string>
    <string name="blood_type">Gol Darah</string>
    <string name="health">Sehat</string>
    <string name="smoking">Merokok</string>
    <string name="start_point">Start Point</string>
    <string name="start_running">Start</string>
    <string name="route">Rute</string>
    <string name="donorRole">Donor</string>


    <string-array name="religions">
        <item>Islam</item>
        <item>Kristen</item>
        <item>Katholik</item>
        <item>Hindhu</item>
        <item>Budha</item>
        <item>Khonghucu</item>
    </string-array>

    <string-array name="bloodTypes">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>

    <string-array name="dietaries">
        <item>Gluten-free</item>
        <item>Lactose-free</item>
        <item>Nut-free</item>
        <item>Vegan</item>
        <item>Egg-free</item>
    </string-array>

    <string-array name="healths">
        <item>Ya</item>
        <item>Tidak</item>
    </string-array>

    <string-array name="isSmokings">
        <item>Ya</item>
        <item>Tidak</item>
    </string-array>

    <string name="article">Sumber : www.alodokter.com/belajar-merawat-bayi-baru-lahir-bagi-pasangan-muda \n\nBeberapa Hal Terkait Bayi Baru Lahir
Bayi baru lahir masih rentan, sehingga perlu diperlakukan secara hati-hati. Untuk itu, ada beberapa hal penting yang wajib diperhatikan saat merawat bayi baru lahir, di antaranya:

\n\n1. Jaga kebersihan dan keamanan bayi

\nPastikan Anda mencuci tangan sebelum memegang atau menggendong bayi. Daya tahan tubuh bayi baru lahir masih lemah, sehingga rentan terhadap kuman dan virus yang mungkin menempel saat tangan Anda tidak bersih.

Berhati-hatilah saat menggendong bayi baru lahir, terutama cara Anda memegang bagian kepala dan leher bayi. Jangan pernah menguncang-guncang bayi saat membangunkan atau menenangkannya, karena dapat mengakibatkan pendarahan di otak.

Hati-hati saat bermain bersama Si Kecil. Jangan lakukan permainan berbahaya, seperti lempar tangkap menggunakan mainan yang keras, melemparnya ke udara, atau menggoyang-goyangkannya di lutut Anda.

\n\n2. Memandikan bayi

\nJangan mandikan Si Kecil sebelum tali pusat copot dan area pusar mengering. Cukup seka dengan waslap yang dibasahi air hangat. Setelah tali pusat copot, mandikan bayi dengan sampo dan sabun tanpa pewangi, atau yang diformulasikan khusus untuk bayi baru lahir.

Jika Anda belum berani memandikan Si Kecil di bak mandi, mintalah tolong ke orang lain untuk menggendong Si Kecil, sementara Anda membasuhnya dengan air.

\n\n3. Mengganti popok

\nSalah satu perawatan bayi baru lahir yang dianggap cukup merepotkan adalah mengganti popok. Bayi baru lahir mungkin perlu berganti popok hingga 6–10 kali dalam sehari, tergantung dari asupan yang diterima bayi.

Umumnya, bayi yang diberi susu formula sejak lahir akan lebih sering buang air kecil dan buang air besar dibandingkan bayi yang diberi ASI.

Bayi pertama kali buang air besar setelah sehari atau dua hari kelahirannya. Kotoran bayi baru lahir yang baik adalah berupa mekonium berwarna hitam. Mekonium terdiri dari lendir, cairan ketuban, dan segala sesuatu yang ditelan bayi saat berada di dalam kandungan.

\n\n4. Menyusui

\nUmumnya, bayi perlu disusui 8–15 kali dalam sehari. Hal ini karena kapasitas perut bayi masih sangat kecil.

Susui Si Kecil sesering mungkin tanpa harus menunggunya menangis atau berteriak terlebih dahulu. Saat menangis, bayi lebih sulit menelan susu sebab lidahnya tidak berada dalam posisi pelekatan yang tepat.

Mungkin pada awalnya menyusui akan terasa sulit dilakukan. Tapi seiring dengan waktu, Anda dan bayi akan semakin menguasai proses ini.

Anjuran Penting bagi Orang Tua
Merawat bayi baru lahir mungkin terasa melelahkan. Tak jarang, banyak orang tua yang merasa stres, terlebih bila baru memiliki anak yang pertama.

Sering kali karena kesibukan merawat bayi baru lahir, orang tua lupa untuk memperhatikan diri sendiri. Agar Anda bisa memberikan yang terbaik dalam merawat Si Kecil, tentu Anda juga perlu memperhatikan kesehatan fisik maupun emosional diri sendiri.

\n\nBeberapa hal berikut ini bisa diterapkan untuk mengelola tekanan saat merawat bayi baru lahir:

\n\n1. Menjaga kondisi fisik

\nPada minggu-minggu awal setelah kelahiran, Anda mungkin akan kurang tidur. Untuk menyiasatinya, tidurlah berbarengan dengan waktu tidur Si Kecil. Jika Si Kecil terbangun karena ingin menyusu, cobalah untuk posisi menyusui sambil berbaring miring, sehingga Anda pun tetap bisa istirahat.

Jika Si Kecil rewel, mintalah tolong pasangan untuk bergantian menjaga dan menenangkannya saat malam hari. Agar tubuh tetap bugar meski kurang tidur, konsumsi makanan sehat, cukupi kebutuhan cairan, lakukan olahraga ringan, dan hindari kafein.

\n\n2. Tidak perlu takut

\nMelihat mungil dan rentannya bayi baru lahir, mungkin membuat Anda merasa khawatir tidak mampu merawatnya dengan baik. Anda juga mungkin merasa panik, terutama jika Si Kecil terus menangis.

Namun kecemasan akan berkurang jika Anda dan pasangan membekali diri dengan pengetahuan dan keterampilan seputar perawatan bayi. Lama kelamaan, Anda akan semakin luwes dan mengerti cara menangani Si Kecil.

\n\n3. Tunda dahulu pekerjaan lain

\nJangan terlalu memaksakan diri untuk melakukan kegiatan yang biasa dilakukan sebelum kelahiran Si Kecil. Pekerjaan rumah, seperti mencuci, mengepel, dan membereskan rumah bisa ditunda dulu, agar Anda tidak terlalu lelah.

Anda bisa membeli lauk siap santap atau memasak menu yang mudah diolah namun tetap bergizi.

\n\n4. Jangan mengurung diri

\nBayi yang rewel saat di dalam rumah mungkin akan ceria saat diajak keluar rumah untuk sekadar berjalan-jalan menghirup udara segar. Memiliki bayi juga bukan berarti membatasi hubungan dengan teman-teman dan keluarga Anda.
Sesekali, biarkan mereka ikut membantu mengasuh bayi Anda. Bantuan ini bisa menghemat tenaga Anda.

\n\n5. Tahu kapan meminta bantuan

\nJika Anda mengalami suatu kendala hingga membuat Anda stres, jangan ragu untuk meminta bantuan dari ahlinya. Misalnya jika Anda mengalami kendala menyusui, berkonsultasilah dengan dokter atau konselor laktasi.

Jika stres yang dirasakan sudah menganggu keseharian Anda, tidak ada salahnya berkonsultasi dengan psikolog.

Saat ini sudah banyak klinik maupun rumah sakit yang menyediakan kelas bagi pasangan yang ingin belajar merawat bayi baru lahir. Selain mengikuti kelas, Anda juga bisa belajar secara daring atau membaca artikel maupun buku yang membahas cara merawat bayi baru lahir.

\n\nDengan membekali diri, harapannya Anda dan pasangan bisa lebih siap dan tidak kaget dengan tugas baru sebagai orang tua. Jika masih memiliki pertanyaan seputar merawat bayi baru lahir, jangan ragu berkonsultasi dengan dokter anak untuk mendapatkan saran terbaik.</string>
    <string name="profile">Profile</string>
    <string name="form_donation">Form Donasi ASI</string>
    <string name="form_request">Form Permintaan ASI</string>
    <string name="logout">Logout</string>
</resources>