<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_4"
    tools:context=".view.BreastMilkRequestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/Title"
            android:text="@string/request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TitleFormInput"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <EditText
            android:id="@+id/nameEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:ignore="Autofill,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/ageTextView"
            style="@style/TitleFormInput"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/ageEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/religionTextView"
            style="@style/TitleFormInput"
            android:text="@string/religion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageEditText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/religionTextInputLayout"
            style="@style/LayoutDropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/religionTextView">

            <AutoCompleteTextView
                android:id="@+id/religion"
                style="@style/Dropdown" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/TitleFormInput"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/religionTextInputLayout" />

        <EditText
            android:id="@+id/phoneEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/bloodTextView"
            style="@style/TitleFormInput"
            android:text="@string/blood_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

        <EditText
            android:id="@+id/bloodEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloodTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/dietaryTextView"
            style="@style/TitleFormInput"
            android:text="@string/dietary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bloodEditText" />

        <EditText
            android:id="@+id/dietaryEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dietaryTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/healthTextView"
            style="@style/TitleFormInput"
            android:text="@string/health"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dietaryEditText" />

        <EditText
            android:id="@+id/healthEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/smokingTextView"
            style="@style/TitleFormInput"
            android:text="@string/smoking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/healthEditText" />

        <EditText
            android:id="@+id/smokingEditText"
            style="@style/FormInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smokingTextView"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/locationTextView"
            style="@style/TitleFormInput"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smokingEditText" />

        <EditText
            android:id="@+id/locationEditText"
            style="@style/FormInputLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

        <Button
            android:id="@+id/locationButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/color_2"
            android:text="@string/current_location"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationEditText" />

        <Button
            android:id="@+id/submitButton"
            style="@style/Button"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>